# devops-course

./: .air.toml  .bazelignore  .bazelrc  .env.example  .gitignore  .golangci.yml  .pre-commit-config.yaml  .prettierignore  .prettierrc.yaml  BUILD.bazel  CHANGELOG.md  CLAUDE.md  MODULE.bazel  Makefile  README.md  docker-compose.yml  go.mod  go.sum  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release-please-config.json
.github/workflows/: ci.yml  e2e.yml  release.yml
apps/web/: BUILD.bazel  astro.config.mjs  eslint.config.mjs  package.json  tsconfig.json  vitest.config.ts
apps/web/src/: content.config.ts
apps/web/src/components/: Exercise.astro  Playground.astro
apps/web/src/content/lessons/cli-tools/: 01-why-go-for-cli.mdx
apps/web/src/layouts/: BaseLayout.astro
apps/web/src/pages/: index.astro  playground.astro
apps/web/src/pages/exercises/: [id].astro
apps/web/src/pages/modules/: index.astro
apps/web/src/utils/: exercises.ts  modules.test.ts  modules.ts  playground.test.ts  playground.ts
bazel/macros/: BUILD.bazel  platforms.bzl
bazel/rules/: BUILD.bazel  actionlint.bzl  eslint.bzl  golangci_lint.bzl  prettier.bzl  shellcheck.bzl  yamllint.bzl
cmd/server/: BUILD.bazel  main.go
e2e/: cypress.config.ts  package.json  tsconfig.json
e2e/cypress/e2e/: exercise.cy.ts  exercises-api.cy.ts  playground.cy.ts
e2e/cypress/support/: e2e.ts
infra/docker/: BUILD.bazel  Dockerfile.api  Dockerfile.web  docker-compose.yml  nginx.conf
internal/api/: BUILD.bazel  middleware.go  middleware_test.go  router.go  router_test.go
internal/database/: BUILD.bazel  database.go  models.go
internal/exercises/: exercise.go  handler.go  handler_test.go  store.go  validate.go  validate_test.go
internal/platform/: BUILD.bazel  platform.go  platform_darwin_amd64.go  platform_darwin_arm64.go  platform_linux_amd64.go  platform_linux_arm64.go  platform_test.go
internal/playground/: BUILD.bazel  compile.go  compile_test.go
tools/: workspace_status.sh
