load("@gazelle//:def.bzl", "gazelle")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("//bazel/rules:actionlint.bzl", "actionlint_test")
load("//bazel/rules:golangci_lint.bzl", "golangci_lint_test")
load("//bazel/rules:yamllint.bzl", "yamllint_test")

# ─── npm ──────────────────────────────────────────────────────────────────────
npm_link_all_packages(name = "node_modules")

exports_files(
    ["pnpm-workspace.yaml"],
    visibility = ["//apps/web:__pkg__"],
)

# ─── Gazelle ──────────────────────────────────────────────────────────────────
# gazelle:prefix github.com/omargallob/devops-course
gazelle(name = "gazelle")

# ─── Go lint ──────────────────────────────────────────────────────────────────
golangci_lint_test(
    name = "golangci_lint",
    srcs = glob(
        ["**/*.go"],
        allow_empty = True,
        exclude = ["bazel-*/**"],
    ),
    config = ".golangci.yml",
    paths = [
        "./cmd/...",
        "./internal/...",
    ],
    tags = ["local"],
)

# ─── YAML lint ────────────────────────────────────────────────────────────────
yamllint_test(
    name = "yamllint",
    srcs = glob(
        [
            "*.yaml",
            "*.yml",
            ".*.yaml",
            ".*.yml",
        ],
        allow_empty = True,
        exclude = [
            "bazel-*/**",
            "node_modules/**",
            "pnpm-lock.yaml",
        ],
    ) + glob(
        [".github/workflows/*.yml"],
        allow_empty = True,
    ),
    config = ".yamllint.yaml",
    tags = ["local"],
)

# ─── GitHub Actions lint ──────────────────────────────────────────────────────
actionlint_test(
    name = "actionlint",
    srcs = glob(
        [".github/workflows/*.yml"],
        allow_empty = True,
    ),
    tags = ["local"],
)

# ─── ESLint (delegated to apps/web) ──────────────────────────────────────────
# The eslint_test target now lives in //apps/web:eslint since apps/web is its
# own Bazel package. This alias keeps `bazel test //:eslint` working.
alias(
    name = "eslint",
    actual = "//apps/web:eslint",
)
