module(
    name = "devops_course",
    version = "0.1.0",
)

# ─── Go ───────────────────────────────────────────────────────────────────────
bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "gazelle", version = "0.51.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.from_file(go_mod = "//:go.mod")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(go_deps, "com_github_go_chi_chi_v5", "com_github_go_chi_cors")

# ─── JavaScript / Node ───────────────────────────────────────────────────────
bazel_dep(name = "aspect_rules_js", version = "3.1.2")
bazel_dep(name = "rules_nodejs", version = "6.7.3")

node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node")
node.toolchain(node_version = "22.18.0")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm")
npm.npm_translate_lock(
    name = "npm",
    pnpm_lock = "//:pnpm-lock.yaml",
    verify_node_modules_ignored = "//:.bazelignore",
)
use_repo(npm, "npm")

pnpm = use_extension("@aspect_rules_js//npm:extensions.bzl", "pnpm", dev_dependency = True)
use_repo(pnpm, "pnpm")

# ─── Container Images ────────────────────────────────────────────────────────
bazel_dep(name = "rules_img", version = "0.3.11")

pull = use_repo_rule("@rules_img//img:pull.bzl", "pull")

pull(
    name = "distroless_static",
    layer_handling = "eager",
    registry = "gcr.io",
    repository = "distroless/static-debian12",
    tag = "nonroot",
    unsafe_allow_tag_without_digest = True,
)

# ─── Platforms ────────────────────────────────────────────────────────────────
bazel_dep(name = "platforms", version = "1.0.0")

# ─── Shell rules ─────────────────────────────────────────────────────────────
bazel_dep(name = "rules_shell", version = "0.6.1")
