load("@npm//:defs.bzl", "npm_link_all_packages")
load("@rules_img//img:image.bzl", "image_index", "image_manifest")
load("@rules_img//img:layer.bzl", "image_layer", "layer_from_tar")
load("@rules_img//img:push.bzl", "image_push")
load("//bazel/macros:platforms.bzl", "declare_platforms")
load("//bazel/rules:eslint.bzl", "eslint_test")

# ─── npm ──────────────────────────────────────────────────────────────────────

npm_link_all_packages(name = "node_modules")

# ─── ESLint ───────────────────────────────────────────────────────────────────

eslint_test(
    name = "eslint",
    srcs = glob(
        [
            "src/**/*.ts",
            "src/**/*.astro",
        ],
        allow_empty = True,
    ),
    config = "eslint.config.mjs",
    globs = [
        "apps/web/src/",
    ],
    tags = ["local"],
    visibility = ["//:__pkg__"],
)

# ─── Astro Build ──────────────────────────────────────────────────────────────
# Uses a local genrule that runs pnpm build against the workspace's real
# node_modules. This avoids issues with platform-specific optional npm
# dependencies (e.g. @rollup/rollup-darwin-arm64) that Bazel's managed npm
# tree does not include.

genrule(
    name = "astro_build",
    srcs = glob(
        [
            "src/**",
            "public/**",
        ],
        allow_empty = True,
    ) + [
        "astro.config.mjs",
        "tsconfig.json",
        "package.json",
        "//:pnpm-workspace.yaml",
    ],
    outs = ["dist_tar.tar"],
    cmd = """
        set -e
        # Resolve workspace root (portable: works on both macOS and Linux).
        WORKSPACE_ROOT=$$(python3 -c "import os,sys; print(os.path.dirname(os.path.realpath(sys.argv[1])))" $(location //:pnpm-workspace.yaml))
        cd "$$WORKSPACE_ROOT"

        # Reconstruct HOME and find the correct Node.js via nvm (Bazel clears env).
        export HOME=$$(eval echo ~$$(id -un))
        NVMRC=$$(cat .nvmrc 2>/dev/null || echo "")
        NVM_NODE_DIR=$$(ls -d "$$HOME/.nvm/versions/node/v$${NVMRC}"* 2>/dev/null | sort -V | tail -1 || echo "")

        # Node dir must come FIRST so pnpm/corepack use the right Node version.
        export PATH="$${NVM_NODE_DIR:+$$NVM_NODE_DIR/bin:}$$WORKSPACE_ROOT/node_modules/.bin:$$HOME/.local/bin:/opt/homebrew/bin:/usr/local/bin:$$PATH"

        # Clean previous build output to avoid stale artifacts.
        rm -rf apps/web/dist

        pnpm --filter @devops-course/web build

        # Package dist into tar with the correct image path prefix.
        STAGING=$$(mktemp -d)
        mkdir -p "$$STAGING/usr/share/nginx/html"
        cp -R apps/web/dist/* "$$STAGING/usr/share/nginx/html/"
        tar -cf "$$OLDPWD/$@" -C "$$STAGING" .
        rm -rf "$$STAGING"
    """,
    local = True,
    tags = ["manual"],
)

# ─── Platforms ────────────────────────────────────────────────────────────────

declare_platforms(
    platforms = [
        ("linux_amd64", "linux", "x86_64"),
    ],
    visibility = ["//visibility:private"],
)

# ─── Container Image ─────────────────────────────────────────────────────────
# The web image layers contain only static files (HTML/CSS/JS) and an nginx
# config — they are platform-independent. We build for a single platform
# (linux/amd64) because the custom layers are identical regardless of arch;
# multi-arch support is inherited from the nginx:alpine base image.
# Using a single platform also avoids duplicate genrule executions.

layer_from_tar(
    name = "static_layer",
    src = ":astro_build",
    tags = ["manual"],
)

image_layer(
    name = "nginx_conf_layer",
    srcs = {
        "/etc/nginx/conf.d": "//infra/docker:nginx.conf",
    },
    tags = ["manual"],
)

image_manifest(
    name = "web_manifest",
    base = "@nginx_alpine",
    layers = [
        ":static_layer",
        ":nginx_conf_layer",
    ],
    tags = ["manual"],
)

image_index(
    name = "image",
    manifests = [":web_manifest"],
    platforms = [
        ":linux_amd64",
    ],
    visibility = ["//visibility:public"],
)

image_push(
    name = "push",
    image = ":image",
    registry = "ghcr.io",
    repository = "omargallob/devops-course/web",
    tag = "latest",
    visibility = ["//visibility:public"],
)
