load("@rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_img//img:image.bzl", "image_index", "image_manifest")
load("@rules_img//img:layer.bzl", "layer_from_binary")
load("@rules_img//img:push.bzl", "image_push")
load("//bazel/macros:platforms.bzl", "declare_platforms")

go_binary(
    name = "server",
    embed = [":server_lib"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "server_lib",
    srcs = ["main.go"],
    importpath = "github.com/omargallob/devops-course/cmd/server",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/api",
        "//internal/platform",
    ],
)

# ─── Platforms ────────────────────────────────────────────────────────────────

declare_platforms(
    platforms = [
        ("linux_amd64", "linux", "x86_64"),
        ("linux_arm64", "linux", "aarch64"),
    ],
    visibility = ["//visibility:private"],
)

# ─── Container Image ─────────────────────────────────────────────────────────

layer_from_binary(
    name = "server_layer",
    binary = ":server",
    path = "/usr/local/bin",
    tags = ["manual"],
)

image_manifest(
    name = "server_manifest",
    base = "@distroless_static",
    layers = [":server_layer"],
    tags = ["manual"],
)

image_index(
    name = "image",
    manifests = [":server_manifest"],
    platforms = [
        ":linux_amd64",
        ":linux_arm64",
    ],
    visibility = ["//visibility:public"],
)

image_push(
    name = "push",
    image = ":image",
    registry = "ghcr.io",
    repository = "omargallob/devops-course/server",
    tag = "latest",
    visibility = ["//visibility:public"],
)
