load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "playground",
    srcs = ["compile.go"],
    importpath = "github.com/omargallob/devops-course/internal/playground",
    visibility = ["//:__subpackages__"],
)

go_test(
    name = "playground_test",
    srcs = ["compile_test.go"],
    embed = [":playground"],
)
